--- a/FlockingSystem.uproject
+++ b/FlockingSystem.uproject
@@ -9,7 +9,10 @@
 			"Type": "Runtime",
 			"LoadingPhase": "Default",
 			"AdditionalDependencies": [
-				"CoreUObject"
+				"CoreUObject",
+				"AIModule",
+				"Engine",
+				"FunctionalTesting"
 			]
 		}
 	],
