Starting Navigation System Dredging
Begining to override core essential navigation classes to replace existing navmesh with GameGrid

--- a/FlockingSystem.uproject
+++ b/FlockingSystem.uproject
@@ -12,7 +12,8 @@
 				"CoreUObject",
 				"AIModule",
 				"Engine",
-				"FunctionalTesting"
+				"FunctionalTesting",
+				"NavigationSystem"
 			]
 		}
 	],
