--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -60,6 +60,11 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_TopDownGameMode",NewClassName="FlockingSystemGameMode")
 +ActiveClassRedirects=(OldClassName="TP_TopDownCharacter",NewClassName="FlockingSystemCharacter")
 
+
+[/Script/Engine.NavigationSystem]
+NavigationSystemClassName="/Script/FlockingSystem.VectorFieldNavigationSystem"
+RequiredNavigationDataClassNames="/Script/FlockingSystem.GameGrid"
+
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
 bAllowNetworkConnection=True
